src/objects/Assessment__c.object
<CustomObject>
    <description>ASSESSMENT - Stores basic assessment info</description>
    <fields>
        <fullName>AccountID__c</fullName>
        <description>Gets the Account ID from the admission lookup and sets the accountperson field in the trigger</description>
        <formula>Admission__r.Person_Being_Served__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Person Relationship
Delete Me</description>
        <label>AccountPerson</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessment_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Areas_of_Concern__c</fullName>
        <description>Risk Assessment field</description>
        <label>Additional Areas of Concern</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admission__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Admission</label>
        <referenceTo>Admission__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>A field to track and manage approval status for assessments.</description>
        <inlineHelpText>A field to track and manage approval status for assessments.</inlineHelpText>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned for Corrections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who approved this assessment?</description>
        <label>Finalized By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssessmentQuestionCount__c</fullName>
        <label>AssessmentQuestionCount</label>
        <summaryForeignKey>Assessment_Response__c.Assessment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AssessmentResponseCount__c</fullName>
        <description>A field to roll-up and count the number of &quot;answers&quot; that have been dropped into the child Assessment_Response__c object so we can use an Apex trigger to then count the expected &quot;answers&quot; for a given assessment, make a comparison, and prevent changing the Status__c field of the Assessment object to &quot;locked&quot; if the count of expected answers is less than the count of answers entered.</description>
        <label>AssessmentResponseCount</label>
        <summaryFilterItems>
            <field>Assessment_Response__c.Response_Has_Value__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Assessment_Response__c.Assessment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Assessment_Count__c</fullName>
        <label>Assessment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_Date__c</fullName>
        <description>The official date for this assessment.</description>
        <inlineHelpText>The official date for this assessment.</inlineHelpText>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Type_Id__c</fullName>
        <formula>Assessment_Type__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Type_Name__c</fullName>
        <formula>IF(Assessment_Type__r.Name != null, Assessment_Type__r.Name, TEXT(Type__c))</formula>
        <label>Assessment Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Assessment Type</label>
        <referenceTo>Assessment_Type__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessment_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>A field to allow users to record descriptive information about the given assessment, including exception case details and brief thoughts/concerns.</description>
        <inlineHelpText>A field to allow users to record descriptive information about the given assessment, including exception case details and brief thoughts/concerns.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delete_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disregard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disregard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dsc_Day_Habilitation_Services__c</fullName>
        <label>Dsc Day Habilitation Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dsc_Home_Based_Hab_Services__c</fullName>
        <label>Dsc Home Based Hab Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dsc_Hourly_Services__c</fullName>
        <label>Dsc Hourly Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dsc_Organizational_Employment_Services__c</fullName>
        <label>Dsc Organizational Employment Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dsc_Other_Services__c</fullName>
        <label>Dsc Other Services</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dsc_Prevocational_Services__c</fullName>
        <label>Dsc Prevocational Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dsc_Private_Pay_Services__c</fullName>
        <label>Dsc Private Pay Services</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dsc_RBSCL_Services__c</fullName>
        <label>Dsc RBSCL Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dsc_Residential_Services__c</fullName>
        <label>Dsc Residential Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dsc_Respite_Services__c</fullName>
        <label>Dsc Respite Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dsc_SCL_Daily_Services__c</fullName>
        <label>Dsc SCL Daily Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dsc_School_Transition_Services__c</fullName>
        <label>Dsc School Transition Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evaluation</label>
        <referenceTo>Evaluation__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Family_Annual_Income__c</fullName>
        <label>Family Annual Income</label>
        <picklist>
            <picklistValues>
                <fullName>15,000 or under</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15,001-25,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25,001-35,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35,001-50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50,001-65,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65,001-80,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80,001-100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 100,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finalized_Date__c</fullName>
        <label>Finalized Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guidelines__c</fullName>
        <formula>IF( Score__c &lt; 21, &apos;Priority&apos;, 
IF( Score__c &lt; 36, &apos;Good&apos;,
IF( Score__c &gt; 35, &apos;Poor&apos;, &apos;&apos;)))</formula>
        <label>Guidelines</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Rights_Review_Explain__c</fullName>
        <label>Individual Rights Review Explain:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Individual_Rights_Review__c</fullName>
        <inlineHelpText>Has this individual made any achievements towards their rights restriction restoration plans (lifting rights restrictions?)</inlineHelpText>
        <label>Individual Rights Review</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Individual_Rights_Review_long_text__c</fullName>
        <label>Individual Rights Review Explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <description>Interval for the assessment</description>
        <label>Interval</label>
        <picklist>
            <picklistValues>
                <fullName>Intake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsOwnerActive__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <label>IsOwnerActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A field to control whether or not an assessment has been submitted and locked, unlocked, etc.</description>
        <inlineHelpText>A field to control whether or not an assessment has been submitted and locked, unlocked, etc.</inlineHelpText>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs__c</fullName>
        <label>Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Needs_long_text__c</fullName>
        <label>Needs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <description>Calculated Score of the assessment</description>
        <label>Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Past_Due_Date__c</fullName>
        <formula>TODAY() -  Assessment_Date__c &gt; 90</formula>
        <label>Past Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Assessment that this one is cloned from</description>
        <label>Previous</label>
        <referenceTo>Assessment__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <description>Indication of the numbered quarter this assessment describes.</description>
        <inlineHelpText>Indication of the numbered quarter this assessment describes.</inlineHelpText>
        <label>Quarterly Assessment Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_Day_Services_Staffing_Ratio__c</fullName>
        <description>Risk Assessment Only Field</description>
        <label>Recommended Day Services Staffing Ratio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <summarizedField>Assessment_Response__c.Score__c</summarizedField>
        <summaryForeignKey>Assessment_Response__c.Assessment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Assignment</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <label>Service Line</label>
        <picklist>
            <picklistValues>
                <fullName>CI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IIH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vistas Hi Ac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vistas Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vistas Therapeutic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wraparound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Needs_Support__c</fullName>
        <label>Service Needs/Support</label>
        <picklist>
            <picklistValues>
                <fullName>Day Habilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Based Habilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizational Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prevocational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBSCL-Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCL (ID)-Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Transition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Services_Required_Level_Day_Services__c</fullName>
        <label>Level of Services Required for Day Servi</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Staffing_Supervision_Needs__c</fullName>
        <description>Risk Assessment Only Field</description>
        <label>Staffing/Supervision Needs</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Re-opened</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strengths_long_text__c</fullName>
        <label>Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected when Assessment is complete</description>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Required_Level_Residential__c</fullName>
        <description>Risk Assessment Only Field</description>
        <label>Level of Support Required for Residentia</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TFC_Family_Vistas__c</fullName>
        <label>TFC/Family Vistas</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>FAD Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restraint Reduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunization - Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunization - Adult</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Verbal_Approval_Obtained_From__c</fullName>
        <label>Verbal Approval Obtained From</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Verbal_Approval_Obtained_On__c</fullName>
        <label>Verbal Approval Obtained On</label>
        <type>Date</type>
    </fields>
    <label>Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Support_Required_Level_Residential__c</columns>
        <columns>Services_Required_Level_Day_Services__c</columns>
        <columns>Staffing_Supervision_Needs__c</columns>
        <columns>Recommended_Day_Services_Staffing_Ratio__c</columns>
        <columns>AccountPerson__c</columns>
        <columns>Status__c</columns>
        <columns>Admission__c</columns>
        <columns>Assessment_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Previous__c</columns>
        <columns>Assessment_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Disregard__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Admission_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Admission__c) &amp;&amp; 

(
Case(TEXT(Type__c),
 &apos;FAD&apos;, 1,
 &apos;Immunization - ChilD&apos;, 1,
 &apos;Immunization - Adult&apos;, 1, 0
)=0
)</errorConditionFormula>
        <errorDisplayField>Admission__c</errorDisplayField>
        <errorMessage>An Admission is required for all Assessments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>All_Questions_not_answered</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Status__c)=&apos;Active Final&apos; &amp;&amp;
 AssessmentQuestionCount__c != AssessmentResponseCount__c</errorConditionFormula>
        <errorMessage>All questions for the assessment have not been answered. Please answer all questions prior to finalizing the assessment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AssessmentQuarterValidation</fullName>
        <active>true</active>
        <description>A rule to make sure that if user selects &quot;quarterly&quot; in interval picklist that they are forced to enter a quarter number in field.</description>
        <errorConditionFormula>ISPICKVAL( Interval__c , &apos;Quarterly&apos;) &amp;&amp;  ISBLANK( Quarter__c )</errorConditionFormula>
        <errorDisplayField>Quarter__c</errorDisplayField>
        <errorMessage>Quarter is required when &quot;Quarterly&quot; is selected from the Interval picklist.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assessment_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Assessment_Date__c ) &amp;&amp;
  LOWER(Assessment_Type__r.Name)=&apos;cans&apos;</errorConditionFormula>
        <errorDisplayField>Assessment_Date__c</errorDisplayField>
        <errorMessage>Assessment Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CANS_SerivceLine_Req</fullName>
        <active>false</active>
        <errorConditionFormula>Assessment_Type__r.Name == &apos;CANS&apos; &amp;&amp; ISPICKVAL(Service_Line__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Service_Line__c</errorDisplayField>
        <errorMessage>A value must be selected for Service Line when completing a CANS assessment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IntervalRequired</fullName>
        <active>true</active>
        <description>A rule to require selection of an interval for each new assessment.</description>
        <errorConditionFormula>Assessment_Type__r.Name == &apos;CANS&apos; &amp;&amp; ISPICKVAL(  Interval__c , &apos;&apos;)</errorConditionFormula>
        <errorMessage>You must select an Interval value to create a new CANS assessment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Locked</fullName>
        <active>true</active>
        <errorConditionFormula>Locked__c &amp;&amp; IF(PRIORVALUE(Locked__c),true,false) &amp;&amp;  !ISCHANGED( OwnerId )</errorConditionFormula>
        <errorMessage>Locked Assessments Can Not be Updated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RISK_Locked</fullName>
        <active>true</active>
        <errorConditionFormula>LOWER(TEXT(Status__c))=&apos;active final&apos; &amp;&amp;
ISBLANK(Approval_Date__c) &amp;&amp;
(LOWER(Assessment_Type__r.Name) =&apos;risk&apos; ||  ISPICKVAL( Type__c , &apos;ISSA&apos;))</errorConditionFormula>
        <errorDisplayField>Approval_Date__c</errorDisplayField>
        <errorMessage>Approval Date  is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TFC_Family_Vistas_Selection_Required</fullName>
        <active>false</active>
        <description>A validation rule that requires a selection be made from the TFC/Family Vistas picklist</description>
        <errorConditionFormula>Assessment_Type__r.Name == &apos;CANS&apos; &amp;&amp; NOT(OR(ISPICKVAL( TFC_Family_Vistas__c , &apos;Yes&apos;) ,ISPICKVAL( TFC_Family_Vistas__c , &apos;No&apos;) ))</errorConditionFormula>
        <errorDisplayField>TFC_Family_Vistas__c</errorDisplayField>
        <errorMessage>A value must be selected for &quot;&quot;TFC / Family Vistas&quot;&quot; when completing a CANS assessment.</errorMessage>
    </validationRules>
</CustomObject>